--- a/index.html
+++ b/index.html
@@ -57,30 +57,16 @@
             </div>
         </div><!-- Page Loader -->
 
-        <div class="sidepanel bg-color5 d-flex flex-column gap-5">
-            <span class="d-flex align-items-center justify-content-center bg-color5"><i
-                    class="far fa-cog fa-spin"></i></span>
-            <div class="sidepanel-box d-flex flex-column align-items-start gap-4">
-                <h6 class="mb-0 fw-normal">Choose Your Color</h6>
-                <div class="color-picker d-flex flex-wrap align-items-start w-100 gap-2">
-                    <a class="scheme1-color applied" href="javascript:void(0);" title=""></a>
-                    <a class="scheme2-color" href="javascript:void(0);" title=""></a>
-                    <a class="scheme3-color" href="javascript:void(0);" title=""></a>
-                    <a class="scheme4-color" href="javascript:void(0);" title=""></a>
-                    <a class="scheme5-color" href="javascript:void(0);" title=""></a>
-                </div><!-- Color Picker -->
-            </div><!-- Side Panel Box -->
-        </div><!-- Side Panel -->
+        
         <section>
             <div class="w-100 pt-60 pb-130 position-relative">
                 <div class="container">
                     <div class="resume-wrapper d-flex justify-content-between position-relative w-100">
                         <div class="resume-sidebar d-flex flex-column position-sticky">
-                            <h1>SRO</h1>
+                            <h1 class="bigbold">SRO</h1>
                             <p>I build accessible, pixel-perfect digital experiences for the web.</p>
 
-                            <div
-                                        class="user-social-wrap d-flex align-items-center justify-content-between position-relative w-100">
+                            <div class="d-flex align-items-center justify-content-between position-relative w-100">
                                         <span>Follow Me:</span>
                                         <div class="social-links d-flex align-items-center gap-1">
                                             
