--- a/index.html
+++ b/index.html
@@ -121,15 +121,8 @@
                                 <section id="background">
                                     <div class="position-relative pt-140 w-100">
                                         <div class="row">
-                                            <div class="col-md-12 col-sm-12 col-lg-5">
-                                                <div class="sec-title-wrap mb-50 d-flex flex-column align-items-start position-relative w-100 wow fadeInUp"
-                                                    data-wow-duration=".5s" data-wow-delay=".2s">
-                                                    <img class="img-fluid w-100"
-                                                        src="assets/images/resources/about-img.jpg" alt="About Image"
-                                                        loading="lazy">
-                                                </div><!-- Sec Title Wrap -->
-                                            </div>
-                                            <div class="col-md-12 col-sm-12 col-lg-7">
+                                        
+                                            <div class="col-md-12 col-sm-12 col-lg-12">
                                                 <div class="about-cap d-flex flex-column position-relative w-100">
                                                     <h3>Background</h3>
                                                     <h3>Master of Science in Entrepreneurship</h3>
@@ -151,32 +144,10 @@
 
                                 <section id="convergance">
                                     <div class="position-relative pt-140 w-100">
-                                        <div class="row">
-                                            <div class="col-md-12 col-sm-12 col-lg-5">
-                                                <div class="sec-title-wrap mb-50 d-flex flex-column align-items-start position-relative w-100 wow fadeInUp"
-                                                    data-wow-duration=".5s" data-wow-delay=".2s">
-                                                    <img class="img-fluid w-100"
-                                                        src="assets/images/resources/about-img.jpg" alt="About Image"
-                                                        loading="lazy">
-                                                </div><!-- Sec Title Wrap -->
-                                            </div>
-                                            <div class="col-md-12 col-sm-12 col-lg-7">
-                                                <div class="about-cap d-flex flex-column position-relative w-100">
-                                                    <h3>Background</h3>
-                                                    <h3>Master of Science in Entrepreneurship</h3>
-                                                    <p>Falmouth University, Cornwall. UK<br>Art and Advanced
-                                                        Technologies</p>
-
-                                                    <h3>Bachelor of Arts in Design</h3>
-                                                    <p>London Metropolitan University, London. UK<br>Science
-                                                        Communication in the Arts</p>
-
-                                                    <h3>ILM Certified in Coaching</h3>
-                                                    <p>Use of evidence-based tools and techniques to unlock potential
-                                                        and drive change</p>
-                                                </div><!-- About Cap -->
-                                            </div>
-                                        </div>
+                                        <a class="position-absolute sz-60"
+                                                            href="assets/videos/sro.MP4"
+                                                            data-fancybox title=""><i
+                                                                class="fas fa-play-circle"></i></a>
                                     </div>
                                 </section>
 
