--- a/index.html
+++ b/index.html
@@ -76,17 +76,11 @@
                                 </ul>
                             </nav>
 
-                            <div
-                                class="mt-90 d-flex align-items-center justify-content-between position-relative w-100">
-
-                                <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i
-                                        class="fab fa-instagram"></i></a>
-
-                            </div><!-- User Social Wrap -->
+                            
                         </div><!-- Resume Sidebar -->
                         <div class="resume-content d-flex flex-column">
                             <div class="theiaStickySidebar">
-                                <section id="home">
+                                <section id="">
                                 </section>
 
 
@@ -158,8 +152,10 @@
                                             </div>
                                         </div>
 
-                                        <a class="position-absolute sz-60" href="assets/videos/sro.MP4" data-fancybox
-                                            title=""><i class="fas fa-play-circle"></i></a>
+                                        <video class="w-100" autoplay loop muted playsinline
+                                            >
+                                            <source src="assets/videos/sro.MP4" type="video/mp4">
+                                        </video>
                                     </div>
                                 </section>
 
@@ -174,6 +170,13 @@
                                                     <p>For workshop enquiries, projects, collaborations, or anything that feels aligned.
                                                 </p>
                                                 <a href="mailto:serena@serenarosaria.com">serena@serenarosaria.com</a>
+                                                <div
+                                class="mt-10 d-flex align-items-center justify-content-between position-relative w-100">
+
+                                <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i
+                                        class="fab fa-instagram"></i></a>
+
+                            </div><!-- User Social Wrap -->
 
                                                 </div><!-- About Cap -->
                                             </div>
