--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
                             <nav class="sidebar-nav">
-                                <ul class="list-unstyled">
+                                <ul class="">
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#background">Background</a></li>
                                     <li><a href="#convergance">Convergance</a></li>
@@ -94,7 +94,7 @@
                                                     <h3>About</h3>
                                                     <p class="mb-0">Working across industries withapplied insight and
                                                         experiencegained from a full-stack portfoliocareer that connects
-                                                        the dots fromclay to code across art, information,and
+                                                        the dots from clay to code across art, information,and
                                                         technology.</p>
                                                     <p class="mb-0">Leading projects that implementeffective strategies
                                                         in onlinebusiness and professional practiceto deliver long-term
