--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
                         </div><!-- Resume Sidebar -->
                         <div class="resume-content d-flex flex-column">
                             <div class="theiaStickySidebar">
-                                <section id="">
+                                <section id="home">
+                                    <div class="scroll-down-text">
+                                        <span>scroll down</span>
+                                    </div>
+
                                 </section>
 
 
