--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
                             <nav class="sidebar-nav">
-                                <ul class="">
+                                <ul>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#background">Background</a></li>
                                     <li><a href="#convergance">Convergance</a></li>
@@ -80,8 +80,8 @@
                         </div><!-- Resume Sidebar -->
                         <div class="resume-content d-flex flex-column">
                             <div class="theiaStickySidebar">
-                                <section id="home">
-                                    <div class="scroll-down-text">
+                                <section id="home" class="mt-95">
+                                    <div class="scroll-down-text text-center">
                                         <span>scroll down</span>
                                     </div>
 
