--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                         </div><!-- Resume Sidebar -->
                         <div class="resume-content d-flex flex-column">
                             <div class="theiaStickySidebar">
-                                <section id="home" class="mt-95">
+                                <section class="mt-95">
                                     <div class="scroll-down-text text-center">
-                                        <span>scroll down</span>
+                                        <span class="scroll-arrow"><i class="fas fa-chevron-down"></i></span>
                                     </div>
 
                                 </section>
