--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="theiaStickySidebar">
                                 <section class="mt-95">
                                     <div class="scroll-down-text text-center">
-                                        <span class="scroll-arrow"><i class="fas fa-chevron-down"></i></span>
+                                        <a href="#about" class="scroll-arrow"><i class="fas fa-chevron-down"></i></a>
                                     </div>
 
                                 </section>
@@ -104,7 +104,7 @@
                                                         in onlinebusiness and professional practiceto deliver long-term
                                                         impact, fostergrowth, and sustain creativefutures.</p>
                                                 </div><!-- About Cap -->
-                                                <img class="img-fluid w-100 pt-60" src="assets/images/sro.jpg"
+                                                <img class="img-fluid w-100 pt-60" src="assets/images/serena.jpg"
                                                     alt="About Image" loading="lazy">
                                             </div>
                                         </div>
@@ -132,7 +132,7 @@
                                                     <p>Use of evidence-based tools and techniques to unlock potential
                                                         and drive change</p>
                                                 </div><!-- About Cap -->
-                                                <img class="img-fluid w-100 pt-60" src="assets/images/insights.jpg"
+                                                <img class="img-fluid w-100 pt-60" src="assets/images/outlook.jpg"
                                                     alt="About Image" loading="lazy">
                                             </div>
                                         </div>
