--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
             background-color: #000000;
             min-height: 100vh;
@@ -24,10 +25,12 @@
             align-items: center;
             font-family: 'Montserrat', sans-serif;
         }
+
         .coming-soon-container {
             text-align: center;
             color: #ffffff;
         }
+
         h1.bigbold {
             font-size: 3rem;
             font-weight: 900;
@@ -35,16 +38,19 @@
             margin-bottom: 1rem;
             color: #ffffff;
         }
+
         p {
             font-size: 1.25rem;
             font-weight: 400;
             color: #ffffff;
             opacity: 0.8;
         }
+
         @media (max-width: 768px) {
             h1.bigbold {
                 font-size: 2rem;
             }
+
             p {
                 font-size: 1rem;
             }
@@ -55,7 +61,11 @@
 <body>
     <div class="coming-soon-container">
         <h1 class="bigbold">SERENA ROSARIA</h1>
-        <p>New Website Coming Soon.</p>
+        <p>New Website Coming Soon ▷</p>
+        <div class="social-links d-flex align-items-center gap-1">
+
+            <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div><!-- Social Links -->
     </div>
 </body>
 
