--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="assets/images/favicon.png" sizes="32x32" type="image/png">
     <title>Serena Rosaria - Coming Soon</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
     <style>
         * {
             margin: 0;
@@ -55,6 +56,22 @@
                 font-size: 1rem;
             }
         }
+
+        .social-links {
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        .social-links a {
+            color: #ffffff;
+            font-size: 1.5rem;
+            opacity: 0.6;
+            transition: opacity 0.3s ease;
+        }
+
+        .social-links a:hover {
+            opacity: 1;
+        }
     </style>
 </head>
 
@@ -62,7 +79,9 @@
     <div class="coming-soon-container">
         <h1 class="bigbold">SERENA ROSARIA</h1>
         <p>New Website Coming Soon ▷</p>
-            <a href="https://www.instagram.com/" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>   
+        <div class="social-links">
+            <a target="_blank" href="https://www.instagram.com/serenarosaria?igsh=MmwxeXFyMGlxbjhn" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>   
     </div>
 </body>
 
