--- a/index.html
+++ b/index.html
@@ -58,19 +58,22 @@
         }
 
         .social-links {
-            margin-top: 2rem;
+            position: fixed;
+            bottom: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
             text-align: center;
         }
 
         .social-links a {
             color: #ffffff;
             font-size: 1.5rem;
-            opacity: 0.6;
+            opacity: 1;
             transition: opacity 0.3s ease;
         }
 
         .social-links a:hover {
-            opacity: 1;
+            opacity: 0.7;
         }
     </style>
 </head>
@@ -78,8 +81,8 @@
 <body>
     <div class="coming-soon-container">
         <h1 class="bigbold">SERENA ROSARIA</h1>
-        <p>New Website Coming Soon ▷</p>
-        <div class="social-links">
+        <p>NEW WEBSITE COMING SOON ▷</p>
+        <div class="social-links mt-90">
             <a target="_blank" href="https://www.instagram.com/serenarosaria?igsh=MmwxeXFyMGlxbjhn" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>   
     </div>
