--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         .coming-soon-container {
             text-align: center;
             color: #ffffff;
+            margin-top: -50px;
         }
 
         h1.bigbold {
